%% src\furnituretype\furnituretype.diagram.mmd

classDiagram
    %% DTOs
    class CreateFurnituretypeDto {
        +name: string
        +deleted_at?: Date | null
    }
    class UpdateFurnituretypeDto
    UpdateFurnituretypeDto --|> CreateFurnituretypeDto : extends (PartialType)

    class FurnituretypeResponseDto {
        +id: number
        +name: string
        +deleted_at?: Date | null
    }

    %% Service
    class FurnituretypeService {
        +constructor(prisma: PrismaService)
        +create(data: CreateFurnituretypeDto): Promise<furnituretype>
        +findAll(): Promise<furnituretype[]>
        +findOne(id: number): Promise<furnituretype | null>
        +update(id: number, data: UpdateFurnituretypeDto): Promise<furnituretype>
        +remove(id: number): Promise<furnituretype>
    }

    %% Controller
    class FurnituretypeController {
        +constructor(furnituretypeService: FurnituretypeService)
        +create(createFurnituretypeDto: CreateFurnituretypeDto): Promise<Furnituretype>
        +findAll(): Promise<Furnituretype[]>
        +findOne(id: string): Promise<Furnituretype>
        +update(id: string, updateFurnituretypeDto: UpdateFurnituretypeDto): Promise<Furnituretype>
        +remove(id: string): Promise<Furnituretype>
    }

    %% Module
    class FurnituretypeModule {
        <<Module>>
    }

    %% Relationships
    FurnituretypeController --> FurnituretypeService : depends on
    FurnituretypeController ..> CreateFurnituretypeDto : uses
    FurnituretypeController ..> UpdateFurnituretypeDto : uses
    FurnituretypeController ..> FurnituretypeResponseDto : returns
    FurnituretypeService ..> CreateFurnituretypeDto : uses
    FurnituretypeService ..> UpdateFurnituretypeDto : uses
    FurnituretypeModule o-- FurnituretypeController : provides
    FurnituretypeModule o-- FurnituretypeService : provides
